Fix number of mines field being too short on Firefox

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -541,6 +541,7 @@ hr {
 
 #settings-modal input:not([type="range"]) {
   max-width: 100px;
+  width: 100%;
 }
 
 #hint-btn {
